--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Test C/C++ HTTP Server</title>
+        <title> Test C/C++ HTTP Server </title>
     </head>
     <body>
-        <h1>
-             Welcome on test HTTP C (based on WinAPI) server!
-        </h1>
+        <h1> Welcome on test HTTP C (based on WinAPI) server! </h1>
+        <hr>
+        <br> <a href="/ind.py"> Python </a>
+        <br> <a href="/ind.pl"> Perl </a>
     </body>
 </html>
