--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Test C/C++ HTTP Server </title>
+        <title> C HTTP Server </title>
     </head>
     <body>
         <h1> Welcome on test HTTP C (based on WinAPI) server! </h1>
