--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title> C HTTP Server </title>
     </head>
     <body>
-        <h1> Welcome on test HTTP C (based on WinAPI) server! </h1>
+        <h1> Welcome on Simple HTTP/1.0 C (based on WinAPI) server! </h1>
         <hr>
         <br> <a href="/ind.py"> Python </a>
         <br> <a href="/ind.pl"> Perl </a>
